[no.45] :bug: Fix scrolling slow on mobile

--- a/45-movie-app/css/style.css
+++ b/45-movie-app/css/style.css
@@ -283,7 +283,8 @@ Overlay Section
   max-width: 100%;
   margin: 20px auto;
   background: var(--overlay-bg-color);
-  overflow: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   transform: translateY(-100px);
   transition: transform 0.3s;
 }
